# study-llama

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  query.files.sql  query.rules.sql  schema.files.sql  sqlc.yaml  workflows.db
.github/workflows/: go_build.yaml  go_docker_build.yaml  go_docker_image.yaml  go_lint.yaml  go_test.yaml  py_build.yaml  py_deploy.yaml  py_lint.yaml  py_test.yaml  py_test_on_push.yaml  py_typecheck.yaml
frontend/: .dockerignore  Dockerfile  Makefile  go.mod  go.sum  main.go  query.auth.sql  query.files.sql  query.rules.sql  schema.auth.sql  schema.rules.sql  sqlc.yaml
frontend/agent/: agent.go  agent_test.go
frontend/auth/: auth.go  auth_test.go  dbops.go  dbops_test.go  schema.sql  secrets.go  secrets_test.go
frontend/authdb/: models.go  query.auth.sql.go
frontend/files/: dbops.go  dbops_test.go  files.go  files_test.go  schema.sql
frontend/filesdb/: db.go  models.go  query.files.sql.go
frontend/handlers/: handlers.go
frontend/rules/: dbops.go  dbops_test.go  schema.sql
frontend/rulesdb/: db.go  models.go  query.rules.sql.go
frontend/templates/: 404.templ  404_templ.go  500.templ  500_templ.go  footer.templ  footer_templ.go  home.templ  home_templ.go  navbar.templ  navbar_templ.go  notes.templ  notes_templ.go  rules.templ  rules_templ.go  search.templ  search_templ.go  signin.templ  signin_templ.go  signup.templ  signup_templ.go  statusBanner.templ  statusBanner_templ.go  unauthorized.templ  unauthorized_templ.go
scripts/: create_qdrant_collections.py
src/study_llama/classify_and_extract/: events.py  models.py  resources.py  utils.py  workflow.py
src/study_llama/filesdb/: models.py  query_files.py
tests/e2e/: test_classify_and_extract.py  test_search.py
tests/unit/: test_filesdb.py  test_rulesdb.py  test_vectordb.py
(+7 files in other folders)
